--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,25 +1,41 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
-
+    <a
+      class="navbar-brand btn btn-light"
+      rel="author"
+      href="{{ site.repository }}"
+      >My GitHub</a
+    >
+    <a class="navbar-brand btn btn-light ml-2" href="https://fragmax.github.io"
+      >FragMAXapp</a
+    >
+    <a
+      class="navbar-brand btn btn-light ml-2"
+      href="https://github.com/gustalima/ISARAloader"
+      >ISARA Loader</a
+    >
     {%- assign page_paths = site.header_pages -%}
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <!-- <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
-    </button>
+    </button> -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        {%- for path in page_paths -%}
-          {%- assign my_page = site.pages | where: "path", path | first -%}
-          {%- if my_page.title -%}
-          <li class="nav-item">
-            <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-          </li>
-          {%- endif -%}
-        {% endfor -%}
+        {%- for path in page_paths -%} {%- assign my_page = site.pages | where:
+        "path", path | first -%} {%- if my_page.title -%}
         <li class="nav-item">
-          <a class="nav-link" href="{{ site.github.repository_url }}">Fork me on Github</a>
+          <a class="nav-link" href="{{ site.repository }}"
+            >{{ my_page.title | escape }}</a
+          >
         </li>
+        {%- endif -%} {% endfor -%}
       </ul>
     </div>
   </div>
