--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,6 +11,7 @@ layout: default
   {%- endif -%}
 
   <section>
+  <div class="alert alert-danger">HOME PAGE</div>
     {{ content }}
   </section>
 
@@ -23,6 +24,7 @@ layout: default
           {%- assign date_format = "%b %-d, %Y" -%}
           {{ post.date | date: date_format }}
         </span>
+        <div class="alert alert-danger">HOME PAGE 2</div>
         <p class="h5">
           <a href="{{ post.url | relative_url }}">
             {{ post.title | escape }}
@@ -34,7 +36,7 @@ layout: default
       </li>
       {%- endfor -%}
     </ul>
-
+<div class="alert alert-danger">HOME PAGE 3</div>
     <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
   {%- endif -%}
 
