--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,36 +10,36 @@ layout: default
 <article>
   <section>
     <div class="d-flex flex-row my-2">
-      <div class="d-flex flex-column w-25 mr-1 left-panel-purple">
+      <div class="d-flex flex-column w-35 mr-1 left-panel-purple">
         <div class="w-100 right-panel-title mt-4">
           <div class="d-flex flex-column my-2">
-            <div class="d-flex alert w-20 p-1">
+            <div class="d-flex alert w-70 p-1 profile-picture">
               <img
                 class="profile-picture align-self-center"
                 src="../assets/imgs/profile.jpg"
               />
             </div>
             <div class="">
-              <h1 class="text-center">Anastasya Shilova</h1>
-              <h4 class="text-dark font-weight-bold text-center">
+              <h1 class="text-center text-light">Anastasya Shilova</h1>
+              <h4 class="text-light font-weight-bold text-center">
                 PHD IN BIOPHYSICS
               </h4>
             </div>
           </div>
-          <h3 class="text-dark font-weight-bold my-4">Details</h3>
+          <h3 class="text-light font-weight-bold my-4">Details</h3>
           <h6 class="mt-2">anastasyashilova@gmail.com</h6>
         </div>
 
         <!-- Links -->
         <div class="w-100 right-panel-title mt-4">
-          <h4 class="text-dark font-weight-bold">Links</h4>
+          <h4 class="text-light font-weight-bold">Links</h4>
           <a href="https://www.linkedin.com/in/anastasiiash/">LinkedIn</a>
         </div>
         <!-- End of Links -->
         <!-- Start of skill block -->
 
         <div class="w-100 right-panel-title mt-4">
-          <h4 class="text-dark font-weight-bold">Skills</h4>
+          <h4 class="text-light font-weight-bold">Skills</h4>
           <!-- Start of skill entry -->
           <div class="d-flex flex-column">
             <div>X-ray Crystallography</div>
@@ -130,7 +130,7 @@ layout: default
         <!-- Start of language block -->
 
         <div class="w-100 right-panel-title mt-4">
-          <h4 class="text-dark font-weight-bold">Languages</h4>
+          <h4 class="text-light font-weight-bold">Languages</h4>
           <!-- Start of language entry -->
           <div class="d-flex flex-column">
             <div>Russian</div>
@@ -170,7 +170,7 @@ layout: default
         </div>
         <!-- End of language block -->
       </div>
-      <div class="w-75 ml-4">
+      <div class="w-65 ml-4">
         <div class="mx-2 my-4">
           <h3 class="text-dark font-weight-bold my-4">Profile</h3>
           <p class="text-justify profile-text my-4">
