--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,7 +10,7 @@ layout: default
 <article>
   <section>
     <div class="d-flex flex-row my-2">
-      <div class="d-flex flex-column w-35 mr-1 left-panel-purple">
+      <div class="d-flex flex-column w-30 mr-1 left-panel-purple">
         <div class="w-100 right-panel-title mt-4">
           <div class="d-flex flex-column my-2">
             <div class="d-flex alert w-70 p-1 profile-picture">
@@ -27,7 +27,7 @@ layout: default
             </div>
           </div>
           <h3 class="text-light font-weight-bold my-4">Details</h3>
-          <h6 class="mt-2">anastasyashilova@gmail.com</h6>
+          <h6 class="mt-2 text-light">anastasyashilova@gmail.com</h6>
         </div>
 
         <!-- Links -->
@@ -41,11 +41,11 @@ layout: default
         <div class="w-100 right-panel-title mt-4">
           <h4 class="text-light font-weight-bold">Skills</h4>
           <!-- Start of skill entry -->
-          <div class="d-flex flex-column">
+          <div class="d-flex flex-column mt-1">
             <div>X-ray Crystallography</div>
             <div class="progress">
               <div
-                class="progress-bar bg-dark"
+                class="progress-bar bg-light"
                 role="progressbar"
                 style="width: 100%"
               ></div>
@@ -53,73 +53,103 @@ layout: default
           </div>
           <!-- End of skill entry -->
           <!-- Start of skill entry -->
-          <div class="d-flex flex-column">
+          <div class="d-flex flex-column mt-1">
             <div>Structural Biology</div>
             <div class="progress">
               <div
-                class="progress-bar bg-dark"
+                class="progress-bar bg-light"
                 role="progressbar"
                 style="width: 80%"
+              ></div>
+              <div
+                class="progress-bar bg-dark"
+                role="progressbar"
+                style="width: 20%"
               ></div>
             </div>
           </div>
           <!-- End of skill entry -->
           <!-- Start of skill entry -->
-          <div class="d-flex flex-column">
+          <div class="d-flex flex-column mt-1">
             <div>Material Science</div>
             <div class="progress">
               <div
-                class="progress-bar bg-dark"
+                class="progress-bar bg-light"
                 role="progressbar"
                 style="width: 80%"
+              ></div>
+              <div
+                class="progress-bar bg-dark"
+                role="progressbar"
+                style="width: 20%"
               ></div>
             </div>
           </div>
           <!-- End of skill entry -->
           <!-- Start of skill entry -->
-          <div class="d-flex flex-column">
+          <div class="d-flex flex-column mt-1">
             <div>Bioinformatics</div>
             <div class="progress">
               <div
-                class="progress-bar bg-dark"
+                class="progress-bar bg-light"
                 role="progressbar"
                 style="width: 80%"
+              ></div>
+              <div
+                class="progress-bar bg-dark"
+                role="progressbar"
+                style="width: 20%"
               ></div>
             </div>
           </div>
           <!-- End of skill entry -->
           <!-- Start of skill entry -->
-          <div class="d-flex flex-column">
+          <div class="d-flex flex-column mt-1">
             <div>Data Analysis</div>
             <div class="progress">
               <div
-                class="progress-bar bg-dark"
+                class="progress-bar bg-light"
                 role="progressbar"
                 style="width: 80%"
               ></div>
-            </div>
-          </div>
-          <!-- End of skill entry -->
-          <!-- Start of skill entry -->
-          <div class="d-flex flex-column">
-            <div>Instrumentation</div>
-            <div class="progress">
               <div
                 class="progress-bar bg-dark"
                 role="progressbar"
-                style="width: 60%"
+                style="width: 20%"
               ></div>
             </div>
           </div>
           <!-- End of skill entry -->
           <!-- Start of skill entry -->
-          <div class="d-flex flex-column">
-            <div>Project Management</div>
+          <div class="d-flex flex-column mt-1">
+            <div>Instrumentation</div>
             <div class="progress">
+              <div
+                class="progress-bar bg-light"
+                role="progressbar"
+                style="width: 60%"
+              ></div>
               <div
                 class="progress-bar bg-dark"
                 role="progressbar"
+                style="width: 40%"
+              ></div>
+            </div>
+          </div>
+          <!-- End of skill entry -->
+          <!-- Start of skill entry -->
+          <div class="d-flex flex-column mt-1">
+            <div>Project Management</div>
+            <div class="progress">
+              <div
+                class="progress-bar bg-light"
+                role="progressbar"
                 style="width: 60%"
+              ></div>
+              <div
+                class="progress-bar bg-dark"
+                role="progressbar"
+                style="width: 40%"
               ></div>
             </div>
           </div>
@@ -132,11 +162,11 @@ layout: default
         <div class="w-100 right-panel-title mt-4">
           <h4 class="text-light font-weight-bold">Languages</h4>
           <!-- Start of language entry -->
-          <div class="d-flex flex-column">
+          <div class="d-flex flex-column mt-1">
             <div>Russian</div>
             <div class="progress">
               <div
-                class="progress-bar bg-dark"
+                class="progress-bar bg-light"
                 role="progressbar"
                 style="width: 100%"
               ></div>
@@ -144,25 +174,35 @@ layout: default
           </div>
           <!-- End of language entry -->
           <!-- Start of language entry -->
-          <div class="d-flex flex-column">
+          <div class="d-flex flex-column mt-1">
             <div>English</div>
             <div class="progress">
               <div
-                class="progress-bar bg-dark"
+                class="progress-bar bg-light"
                 role="progressbar"
                 style="width: 80%"
+              ></div>
+              <div
+                class="progress-bar bg-dark"
+                role="progressbar"
+                style="width: 20%"
               ></div>
             </div>
           </div>
           <!-- End of language entry -->
           <!-- Start of language entry -->
-          <div class="d-flex flex-column">
+          <div class="d-flex flex-column mt-1">
             <div>French</div>
             <div class="progress">
               <div
-                class="progress-bar bg-dark"
+                class="progress-bar bg-light"
                 role="progressbar"
                 style="width: 80%"
+              ></div>
+              <div
+                class="progress-bar bg-dark"
+                role="progressbar"
+                style="width: 20%"
               ></div>
             </div>
           </div>
@@ -170,9 +210,9 @@ layout: default
         </div>
         <!-- End of language block -->
       </div>
-      <div class="w-65 ml-4">
+      <div class="w-70 ml-4">
         <div class="mx-2 my-4">
-          <h3 class="text-dark font-weight-bold my-4">Profile</h3>
+          <h2 class="text-dark font-weight-bold my-4">Profile</h2>
           <p class="text-justify profile-text my-4">
             An experienced researcher with in-depth knowledge in biophysics,
             structural biology, and data analysis who would like to pursue a
@@ -182,7 +222,7 @@ layout: default
         <!-- End of profile card  -->
         <!-- Start of employment details card  -->
         <div class="mx-2 my-4">
-          <h3 class="text-dark font-weight-bold my-4">Employment history</h3>
+          <h2 class="text-dark font-weight-bold my-4">Employment history</h2>
           <!-- Start of employment  card  -->
           <div class="d-flex flex-row my-2">
             <div class="w-100">
@@ -192,7 +232,7 @@ layout: default
               <h5 class="time-employment text-dark font-weight-bold mt-1">
                 OCTOBER 2020 - PRESENT
               </h5>
-              <ul>
+              <ul class="ml-3 my-2">
                 <li>Designing and building the website front-end.</li>
                 <li>
                   Establishing and guiding the website’s architecture (using
@@ -215,7 +255,7 @@ layout: default
               <h5 class="time-employment text-dark font-weight-bold mt-1">
                 JANUARY 2020 - JUNE 2020
               </h5>
-              <ul>
+              <ul class="ml-3 my-2">
                 <li>Life Sciences product demonstrations at customer sites</li>
                 <li>Technical training for customers and colleagues</li>
                 <li>Technical support</li>
@@ -234,7 +274,7 @@ layout: default
               <h5 class="time-employment text-dark font-weight-bold mt-1">
                 FEBRUARY 2018 — DECEMBER 2019
               </h5>
-              <ul>
+              <ul class="ml-3 my-2">
                 <li>Project management (serial crystallography)</li>
                 <li>User's support and beamline set up</li>
                 <li>Technical support and training for users</li>
@@ -259,7 +299,7 @@ layout: default
               <h5 class="time-employment text-dark font-weight-bold mt-1">
                 JANUARY 2014 — APRIL 2017
               </h5>
-              <ul>
+              <ul class="ml-3 my-2">
                 <li>
                   Development of new methods for X-ray crystallography with
                   synchrotron radiation (serial crystallography)
@@ -283,7 +323,7 @@ layout: default
               <h5 class="time-employment text-dark font-weight-bold mt-1">
                 APRIL 2012 — APRIL 2013
               </h5>
-              <ul>
+              <ul class="ml-3 my-2">
                 <li>
                   X-ray diffraction analysis of inorganic compounds (X-ray
                   powder diffraction)
@@ -301,7 +341,7 @@ layout: default
 
         <!-- Start of education details card  -->
         <div class="mx-2 my-4">
-          <h3 class="text-dark font-weight-bold my-4">Education</h3>
+          <h2 class="text-dark font-weight-bold my-4">Education</h2>
           <!-- Start of education  card  -->
           <div class="d-flex flex-row my-2">
             <div class="w-100">
@@ -353,7 +393,7 @@ layout: default
         <!-- End of education details card  -->
         <!-- Grants Section -->
         <div class="mx-2 my-4">
-          <h3 class="text-dark font-weight-bold my-4">Software knowledge</h3>
+          <h2 class="text-dark font-weight-bold my-4">Software knowledge</h2>
           <table class="table table-border">
             <tr>
               <td>XDS</td>
@@ -396,7 +436,7 @@ layout: default
         <!-- End of Grants-->
         <!-- Grants Section -->
         <div class="mx-2 my-4">
-          <h3 class="text-dark font-weight-bold my-4">Grants</h3>
+          <h2 class="text-dark font-weight-bold my-4">Grants</h2>
 
           <!-- Start of education  card  -->
           <div class="d-flex flex-row my-2">
@@ -422,7 +462,7 @@ layout: default
         <!-- Start of Publications  card  -->
 
         <div class="mx-2 my-4">
-          <h3 class="text-dark font-weight-bold my-4">Publications</h3>
+          <h2 class="text-dark font-weight-bold my-4">Publications</h2>
           <!-- HIDDEN BLOCK -->
           <a hidden href="https://scholar.google.com/citations?user=xxxxxxx=en"
             >Google Scholar profile</a
