--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -209,6 +209,31 @@ layout: default
           <!-- End of language entry -->
         </div>
         <!-- End of language block -->
+        <!-- Hobbies-->
+        <div class="w-100 right-panel-title mt-4">
+          <h4 class="text-light font-weight-bold mt-2">Hobbies</h4>
+          <p class="text-light">
+            <span class="va-middle material-icons">surfing</span> Surfing
+          </p>
+          <p class="text-light">
+            <span class="va-middle material-icons">snowbarding</span>
+            Snowboarding
+          </p>
+          <p class="text-light">
+            <span class="va-middle material-icons">luggage</span>
+            Travelling
+          </p>
+          <p class="text-light">
+            <span class="va-middle material-icons">hiking</span> Hiking
+          </p>
+          <p class="text-light">
+            <span class="va-middle material-icons">dinner_dining </span> Cooking
+          </p>
+          <p class="text-light">
+            <span class="va-middle material-icons">fitness_center</span> Fitness
+          </p>
+        </div>
+        <!-- End of Hobbies-->
       </div>
       <div class="w-70 ml-4">
         <div class="mx-2 my-4">
