--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,8 +7,7 @@
   {%- feed_meta -%}
   <script src="{{ "/assets/javascript/bootstrap/jquery.min.js" | relative_url }}"></script>
   <script src="{{ "/assets/javascript/bootstrap/bootstrap.bundle.min.js" | relative_url }}"></script>
-
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/style.css" />
-  <script type="text/javascript" src="../assets/javascript/bibtex_js.min.js"></script>
 
 </head>
