--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -216,7 +216,7 @@ layout: default
             <span class="va-middle material-icons">surfing</span> Surfing
           </p>
           <p class="text-light">
-            <span class="va-middle material-icons">snowbarding</span>
+            <span class="va-middle material-icons">snowboarding</span>
             Snowboarding
           </p>
           <p class="text-light">
